// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform base 1`] = `
"function base(a) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a <= 0) {
      return a;
    }
    [a] = [a - 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform combinedLogicalTernary 1`] = `
"function combinedLogicalTernary(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    const _left = a > 0;
    if (_left) {
      if (a > 10) {
        const _left2 = b;
        if (_left2) {
          return _left2;
        } else {
          [a, b] = [a + 1, (b + 1) % 5];
          _continueRecursion = true;
          continue _tailCallLoop;
        }
      } else {
        [a, b] = [a + 1, (b + 2) % 2];
        _continueRecursion = true;
        continue _tailCallLoop;
      }
    } else {
      return _left;
    }
  }
}"
`;

exports[`transform defaultArgActive 1`] = `
"function defaultArgActive(a, b = 0) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, 0];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform defaultArgInactive 1`] = `
"function defaultArgInactive(a, b = 0) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, b + 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform exceedingArgs 1`] = `
"function exceedingArgs(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > b) return a - b;
    [a, b] = [a + b, b, console.log("CALL")];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform logicalAnd 1`] = `
"function logicalAnd(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > 100) {
      return b;
    }
    const _left = a;
    if (_left) {
      [a, b] = [a + 1, b + 1];
      _continueRecursion = true;
      continue _tailCallLoop;
    } else {
      return _left;
    }
  }
}"
`;

exports[`transform logicalOr 1`] = `
"function logicalOr(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > 100) {
      return b;
    }
    const _left = a;
    if (_left) {
      return _left;
    } else {
      [a, b] = [a + 1, b + 1];
      _continueRecursion = true;
      continue _tailCallLoop;
    }
  }
}"
`;

exports[`transform multipleArgs 1`] = `
"function multipleArgs(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, b + 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform multipleReturns 1`] = `
"function multipleReturns(a, b, c) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < 0) return a;
    if (b < 0) {
      const n = b + c;
      [a, b, c] = [n, b, c + 1];
      _continueRecursion = true;
      continue _tailCallLoop;
    }
    [a, b, c] = [a + 1, b + 1, c];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform nestedStatements 1`] = `
"function nestedStatements(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > b) {
      if (a > 0) {
        [a, b] = [a - 1, b];
        _continueRecursion = true;
        continue _tailCallLoop;
      }
      return a - b;
    }
    return a + b;
  }
}"
`;

exports[`transform noReturn 1`] = `
"function noReturn(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < 10) {
      [a, b] = [a + b, b];
      _continueRecursion = true;
      continue _tailCallLoop;
    } else if (a % 2 === 0) {
      return a;
    }
  }
}"
`;

exports[`transform nullishCoalescing 1`] = `
"function nullishCoalescing(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a !== null && a !== void 0) {
      return a;
    } else {
      [a, b] = [b > 100 ? b : null, b + 1];
      _continueRecursion = true;
      continue _tailCallLoop;
    }
  }
}"
`;

exports[`transform ternary 1`] = `
"function ternary(a, b, c) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > 10) {
      return c;
    } else {
      [a, b, c] = [a + b, b, c + a];
      _continueRecursion = true;
      continue _tailCallLoop;
    }
  }
}"
`;

exports[`transform undefinedArg 1`] = `
"function undefinedArg(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, undefined];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform wrapAnonymous1 1`] = `
"function wrapAnonymous1() {
  const arrowFunction = a => {
    let _continueRecursion2 = true;
    _tailCallLoop2: while (_continueRecursion2) {
      _continueRecursion2 = false;
      if (a <= 0) return a;
      [a] = [a - 1];
      _continueRecursion2 = true;
      continue _tailCallLoop2;
    }
  };
}"
`;

exports[`transform wrapAnonymous2 1`] = `
"function wrapAnonymous2() {
  const arrowFunctionNoBody = a => {
    let _continueRecursion2 = true;
    _tailCallLoop2: while (_continueRecursion2) {
      _continueRecursion2 = false;
      if (a <= 0) {
        return a;
      } else {
        [a] = [a - 1];
        _continueRecursion2 = true;
        continue _tailCallLoop2;
      }
    }
  };
}"
`;

exports[`transform wrapAnonymous3 1`] = `
"function wrapAnonymous3() {
  const functionExpression = function (a) {
    let _continueRecursion2 = true;
    _tailCallLoop2: while (_continueRecursion2) {
      _continueRecursion2 = false;
      if (a <= 0) return a;
      [a] = [a - 1];
      _continueRecursion2 = true;
      continue _tailCallLoop2;
    }
  };
}"
`;
